--- a/test.yml
+++ b/test.yml
@@ -6,7 +6,7 @@
     - name: running tocode
       win_command: C:\Users\ansible\Downloads\dr\demo1.bat
       #win_command: python C:\Users\ansible\Downloads\dr\drcode3.py
-      register: result
+      #register: result
 
    # - name: debug output
    #   debug:
