--- a/test.yml
+++ b/test.yml
@@ -4,7 +4,7 @@
   hosts: inmbz2081.in.dst.ibm.com
   tasks:
     - name: running tocode
-      win_command: C:\Users\ansible\Downloads\dr\download\demo1.bat
+      win_shell: C:\Users\ansible\Downloads\dr\download\demo1.bat
       #win_command: C:\Program Files (x86)\Python39-32\pythonw.exe C:\Users\ansible\SAP\demo\Tcode_new\Tcode_SM51.py RS4 100 omnsuman Welcome@4 C:\Users\ansible\Downloads\dr\download
       #win_command: python C:\Users\ansible\Downloads\dr\download\drcode3.py
       register: result
