--- a/test.yml
+++ b/test.yml
@@ -5,10 +5,10 @@
   gather_facts: no
   tasks:
     - name: running tocode
-      #win_command: C:\Users\ansible\Downloads\dr\download\test.bat
-      win_command: '"C:\Program Files (x86)\Python39-32\pythonw.exe" C:\Users\ansible\SAP\demo\Tcode_new\Tcode_SM51.py RS4 100 omnsuman Welcome@4 C:\Users\ansible\Downloads\dr\download'
+      script: C:\Users\ansible\Downloads\dr\download\test.bat
+      #win_command: '"C:\Program Files (x86)\Python39-32\pythonw.exe" C:\Users\ansible\SAP\demo\Tcode_new\Tcode_SM51.py RS4 100 omnsuman Welcome@4 C:\Users\ansible\Downloads\dr\download'
       #win_command: python C:\Users\ansible\Downloads\dr\download\drcode3.py
-      register: result
+      #register: result
       #process_min_count: 2
 
     - name: debug output
