--- a/test.yml
+++ b/test.yml
@@ -4,12 +4,21 @@
   hosts: inmbz2081.in.dst.ibm.com
   gather_facts: yes
   tasks:
-    - name: running tocode
-      script: C:\Users\ansible\Downloads\dr\download\test.bat
-      #win_command: '"C:\Program Files (x86)\Python39-32\pythonw.exe" C:\Users\ansible\SAP\demo\Tcode_new\Tcode_SM51.py RS4 100 omnsuman Welcome@4 C:\Users\ansible\Downloads\dr\download'
-      #win_command: python C:\Users\ansible\Downloads\dr\download\drcode3.py
+    - name: Copy File
+      win_copy:
+        src: C:\Users\002E5J744\Desktop\Py Codes\test.bat
+        dest: C:\Users\ansible\Downloads\dr\download\    
+        remote_src: yes
+  #  - name: running tocode
+  #    script: C:\Users\ansible\Downloads\dr\download\test.bat
+  #    #win_command: '"C:\Program Files (x86)\Python39-32\pythonw.exe" C:\Users\ansible\SAP\demo\Tcode_new\Tcode_SM51.py RS4 100 omnsuman Welcome@4 C:\Users\ansible\Downloads\dr\download'
+  #    #win_command: python C:\Users\ansible\Downloads\dr\download\drcode3.py
       #register: result
       #process_min_count: 2
+      
+    #- name: builtin
+   #  ansible.builtin.script:
+   #    cmd:
 
     #- name: debug output
     #  debug:
