--- a/test.yml
+++ b/test.yml
@@ -5,8 +5,7 @@
   gather_facts: no
   tasks:
     - name: builtin
-      ansible.windows.win_shell:
-        cmd: C:\Users\ansible\Downloads\dr\download\test.bat
+      ansible.windows.win_command: C:\Users\ansible\Downloads\dr\download\test.bat
    # - name: Copy File
    #  win_copy:
    #     src: C:/Users/002E5J744/Desktop/Py Codes/test.bat
