--- a/test.yml
+++ b/test.yml
@@ -1,27 +1,21 @@
 ---
 
 - name: running tcode from windows
-  hosts: all
+  hosts: inmbz2081.in.dst.ibm.com
   gather_facts: false
   become: yes
-  tasks:
-    
-    - name: Copy File
-      win_copy:
-        src: C:/Users/002E5J744/Desktop/Py Codes/test.bat
-        dest: C:\Users\ansible\Downloads\dr\download\    
- 
-   # - name: running tocode
-   #   win_command: C:\Users\ansible\Downloads\dr\download\test.bat
+  tasks: 
+    - name: running tocode
+      win_command: C:\Users\ansible\SAP\demo\demo.bat
   #    #win_command: '"C:\Program Files (x86)\Python39-32\pythonw.exe" C:\Users\ansible\SAP\demo\Tcode_new\Tcode_SM51.py RS4 100 omnsuman Welcome@4 C:\Users\ansible\Downloads\dr\download'
   #    #win_command: python C:\Users\ansible\Downloads\dr\download\drcode3.py
-      #register: result
+      register: result
       #process_min_count: 2
       
     #- name: builtin
    #  ansible.builtin.script:
    #    cmd:
 
-    #- name: debug output
-    #  debug:
-    #    var: result  
+    - name: debug output
+      debug:
+        var: result  
