--- a/test.yml
+++ b/test.yml
@@ -10,7 +10,7 @@
   #    #win_command: '"C:\Program Files (x86)\Python39-32\pythonw.exe" C:\Users\ansible\SAP\demo\Tcode_new\Tcode_SM51.py RS4 100 omnsuman Welcome@4 C:\Users\ansible\Downloads\dr\download'
   #    #win_command: python C:\Users\ansible\Downloads\dr\download\drcode3.py
       register: result
-      process_min_count: 2
+      #process_min_count: 2
       
     #- name: builtin
    #  ansible.builtin.script:
