--- a/test.yml
+++ b/test.yml
@@ -6,7 +6,7 @@
   #become: yes
   tasks: 
     - name: running tocode
-      script: C:\Users\ansible\SAP\demo\demo.bat
+      win_command: C:\Users\ansible\SAP\demo\demo.bat
   #    #win_command: '"C:\Program Files (x86)\Python39-32\pythonw.exe" C:\Users\ansible\SAP\demo\Tcode_new\Tcode_SM51.py RS4 100 omnsuman Welcome@4 C:\Users\ansible\Downloads\dr\download'
   #    #win_command: python C:\Users\ansible\Downloads\dr\download\drcode3.py
       register: result
