--- a/test.yml
+++ b/test.yml
@@ -10,6 +10,10 @@
   #    #win_command: '"C:\Program Files (x86)\Python39-32\pythonw.exe" C:\Users\ansible\SAP\demo\Tcode_new\Tcode_SM51.py RS4 100 omnsuman Welcome@4 C:\Users\ansible\Downloads\dr\download'
   #    #win_command: python C:\Users\ansible\Downloads\dr\download\drcode3.py
       register: result
+    - name: Wait until the string "completed" is in the file /tmp/foo before continuing
+      wait_for:
+        path: C:\Users\ansible\SAP\demo\demo.bat
+        search_regex: completed
       #process_min_count: 2
       
     #- name: builtin
