--- a/test.yml
+++ b/test.yml
@@ -7,7 +7,7 @@
   tasks: 
     - name: running tocode
       #ansible.windows.win_shell: C:\Users\ansible\Downloads\dr\Python39.ps1
-      win_shell: C:\Users\ansible\SAP\demo\demo.bat
+      win_shell: C:\Users\ansible\Downloads\dr\Python39.ps1
       register: result
       #process_min_count: 2
       
