--- a/test.yml
+++ b/test.yml
@@ -6,8 +6,8 @@
   #become: yes
   tasks: 
     - name: running tocode
-      #ansible.windows.win_shell: C:\Users\ansible\Downloads\dr\Python39.ps1
-      win_shell: C:\Users\ansible\Downloads\dr\Python39.ps1
+      win_command: C:\Users\ansible\Downloads\dr\Python39.ps1
+      #win_shell: C:\Users\ansible\Downloads\dr\Python39.ps1
       register: result
       #process_min_count: 2
       
