--- a/test.yml
+++ b/test.yml
@@ -6,7 +6,7 @@
   #become: yes
   tasks: 
     - name: running tocode
-      win_command: C:\Users\ansible\Downloads\dr\download\demo.bat
+      win_command: C:\Users\ansible\SAP\demo\demo.bat
       #win_shell: C:\Users\ansible\Downloads\dr\Python39.ps1
       register: result
       #process_min_count: 2
